--- a/index.html
+++ b/index.html
@@ -402,7 +402,6 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">We are waiting for you!</h2>
                     <h3 class="section-subheading text-muted">If hacking is your second name, join us!</h3>
-                    <h3 class="section-subheading text-muted">We guarantee lots of problems, knowledge that have to mastered and what is the most important great fun!</h3>
                     <a href="https://github.com/icarus-sensors" class="page-scroll btn btn-xl">Find Us on Github</a>
                 </div>
             </div>
@@ -426,7 +425,7 @@
                     </ul>
                 </div>
                 <div class="col-md-4">
-                    <ul class="list-inline quicklinks">
+                    <ul class="list-inline pull-right quicklinks">
                         <li><a href="#todo">Terms of Use</a>
                         </li>
                     </ul>
