--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome To Our Products!</div>
                 <div class="intro-heading">It's Nice To Meet You</div>
-                <a href="#mission" class="page-scroll btn btn-xl">Tell Me More</a>
+                <a href="#mission" class="page-scroll btn btn-xl">Discover More</a>
             </div>
         </div>
     </header>
@@ -369,32 +369,32 @@
     </section>
 
     <!-- Clients Aside -->
-    <!--<aside class="clients">-->
-        <!--<div class="container">-->
-            <!--<div class="row">-->
-                <!--<div class="col-md-3 col-sm-6">-->
-                    <!--<a href="#">-->
-                        <!--<img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">-->
-                    <!--</a>-->
-                <!--</div>-->
-                <!--<div class="col-md-3 col-sm-6">-->
-                    <!--<a href="#">-->
-                        <!--<img src="img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">-->
-                    <!--</a>-->
-                <!--</div>-->
-                <!--<div class="col-md-3 col-sm-6">-->
-                    <!--<a href="#">-->
-                        <!--<img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">-->
-                    <!--</a>-->
-                <!--</div>-->
-                <!--<div class="col-md-3 col-sm-6">-->
-                    <!--<a href="#">-->
-                        <!--<img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">-->
-                    <!--</a>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</aside>-->
+    <aside class="clients">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 col-sm-6">
+                    <a href="#">
+                        <img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <a href="#">
+                        <img src="img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <a href="#">
+                        <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <a href="#">
+                        <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </aside>
 
     <section id="contact">
         <div class="container">
