--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">To build system like that it needs time, knowledge and lot of patient.</h3>
                 </div>
             </div>
             <div class="row">
@@ -237,60 +237,70 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/icarus-idea.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                    <h4>September 2014</h4>
+                                    <h4 class="subheading">Born of Icarus System</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Everything starts with a simple idea. It grows and become something real.
+                                        So real that you can almost feel that it is already done. Journey begins with planning, brainstorming,
+                                        collecting materials and tools.
+                                    </p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/icarus-nrf51822.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
+                                    <h4>October 2014</h4>
+                                    <h4 class="subheading">Heartbeat of the system</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">
+                                        With help of nRF51822 chip we were able to get some heartbeat from lifeless silicon
+                                        to our test phones. It was very important moment for all of us as every single components of
+                                        Icarus Sensor System will be based on that chip.
+                                    </p>
                                 </div>
                             </div>
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/icarus-ride.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
+                                    <h4>"December 2014"</h4>
+                                    <h4 class="subheading">First test ride</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">
+                                        Our first goal is to build fully functional cadence and speed sensor that connect to your phone through
+                                        Bluetooth Low Energy interface.<br/>Check out the <a href="#" title="Icarus Bike Sensor">Icarus Bike Sensor</a> page for more details.
+                                    </p>
                                 </div>
                             </div>
                         </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
+                        <!--<li class="timeline-inverted">-->
+                            <!--<div class="timeline-image">-->
+                                <!--<img class="img-circle img-responsive" src="img/about/4.jpg" alt="">-->
+                            <!--</div>-->
+                            <!--<div class="timeline-panel">-->
+                                <!--<div class="timeline-heading">-->
+                                    <!--<h4>July 2014</h4>-->
+                                    <!--<h4 class="subheading">Phase Two Expansion</h4>-->
+                                <!--</div>-->
+                                <!--<div class="timeline-body">-->
+                                    <!--<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>-->
+                                <!--</div>-->
+                            <!--</div>-->
+                        <!--</li>-->
                         <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <h4>Be Part
@@ -369,32 +379,32 @@
     </section>
 
     <!-- Clients Aside -->
-    <aside class="clients">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-            </div>
-        </div>
-    </aside>
+    <!--<aside class="clients">-->
+        <!--<div class="container">-->
+            <!--<div class="row">-->
+                <!--<div class="col-md-3 col-sm-6">-->
+                    <!--<a href="#">-->
+                        <!--<img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">-->
+                    <!--</a>-->
+                <!--</div>-->
+                <!--<div class="col-md-3 col-sm-6">-->
+                    <!--<a href="#">-->
+                        <!--<img src="img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">-->
+                    <!--</a>-->
+                <!--</div>-->
+                <!--<div class="col-md-3 col-sm-6">-->
+                    <!--<a href="#">-->
+                        <!--<img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">-->
+                    <!--</a>-->
+                <!--</div>-->
+                <!--<div class="col-md-3 col-sm-6">-->
+                    <!--<a href="#">-->
+                        <!--<img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">-->
+                    <!--</a>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</aside>-->
 
     <section id="contact">
         <div class="container">
