--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Our Mission</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">We want to challenge status quo in fitness and health device ecosystems.</h3>
 
 
                 </div>
@@ -103,7 +103,10 @@
                         <i class="fa fa-sun-o fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Open Source & Hardware</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">
+                        We believe in open and friendly world. Everyone should have the same access to technical inventions without
+                        any limitations. Open Source and Open Hardware initiatives allow us to make this real.
+                    </p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -111,7 +114,10 @@
                         <i class="fa fa-users fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Community Driven</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">
+                        It requires lot of individual human beings to make something that is really powerful and can change the way we live.
+                        We turn to the Community to ask for help with making our dream real. Lets build Icarus system together.
+                    </p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -119,7 +125,10 @@
                         <i class="fa fa-plug fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Fully Expandable</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">
+                        Whole idea behind Icarus system come from micro-devices that can interact with each other through the air.
+                        Every single of them behave independently and can live on its own. That is why it is so easy to add new pieces.
+                    </p>
                 </div>
             </div>
         </div>
@@ -130,8 +139,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Products</h2>
+                    <h3 class="section-subheading text-muted">We present you with a set of products that we are building
+                        or we are planning to develop.</h3>
                 </div>
             </div>
             <div class="row">
@@ -139,84 +149,113 @@
                     <a href="#productsModal1" class="products-link" data-toggle="modal">
                         <div class="products-hover">
                             <div class="products-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <i class="fa fa-eye fa-3x"></i>
                             </div>
                         </div>
                         <img src="img/products/roundicons.png" class="img-responsive" alt="">
                     </a>
                     <div class="products-caption">
-                        <h4>Round Icons</h4>
-                        <p class="text-muted">Graphic Design</p>
+                        <h4>Icarus Bike Sensor</h4>
+                        <p class="text-muted">speed, cadence, acceleration, pressure monitor
+                        </p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 products-item">
                     <a href="#productsModal2" class="products-link" data-toggle="modal">
                         <div class="products-hover">
                             <div class="products-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <i class="fa fa-eye fa-3x"></i>
                             </div>
                         </div>
                         <img src="img/products/startup-framework.png" class="img-responsive" alt="">
                     </a>
                     <div class="products-caption">
-                        <h4>Startup Framework</h4>
-                        <p class="text-muted">Website Design</p>
+                        <h4>Icarus Accelerometer Band</h4>
+                        <p class="text-muted">accelerometer on your wrist</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 products-item">
                     <a href="#productsModal3" class="products-link" data-toggle="modal">
                         <div class="products-hover">
                             <div class="products-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <i class="fa fa-eye fa-3x"></i>
                             </div>
                         </div>
                         <img src="img/products/treehouse.png" class="img-responsive" alt="">
                     </a>
                     <div class="products-caption">
-                        <h4>Treehouse</h4>
-                        <p class="text-muted">Website Design</p>
+                        <h4>Icarus Gyro Band</h4>
+                        <p class="text-muted">accelerometer & gyroscope on your wrist</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 products-item">
                     <a href="#productsModal4" class="products-link" data-toggle="modal">
                         <div class="products-hover">
                             <div class="products-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <i class="fa fa-eye fa-3x"></i>
                             </div>
                         </div>
                         <img src="img/products/golden.png" class="img-responsive" alt="">
                     </a>
                     <div class="products-caption">
-                        <h4>Golden</h4>
-                        <p class="text-muted">Website Design</p>
+                        <h4>Icarus Heart Monitor</h4>
+                        <p class="text-muted">chest ECG monitor</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 products-item">
                     <a href="#productsModal5" class="products-link" data-toggle="modal">
                         <div class="products-hover">
                             <div class="products-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <i class="fa fa-eye fa-3x"></i>
                             </div>
                         </div>
                         <img src="img/products/escape.png" class="img-responsive" alt="">
                     </a>
                     <div class="products-caption">
-                        <h4>Escape</h4>
-                        <p class="text-muted">Website Design</p>
+                        <h4>Icarus Bike Computer</h4>
+                        <p class="text-muted">present data on your bike</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 products-item">
                     <a href="#productsModal6" class="products-link" data-toggle="modal">
                         <div class="products-hover">
                             <div class="products-hover-content">
-                                <i class="fa fa-plus fa-3x"></i>
+                                <i class="fa fa-eye fa-3x"></i>
                             </div>
                         </div>
                         <img src="img/products/dreams.png" class="img-responsive" alt="">
                     </a>
                     <div class="products-caption">
-                        <h4>Dreams</h4>
-                        <p class="text-muted">Website Design</p>
+                        <h4>Icarus Simple Watch</h4>
+                        <p class="text-muted">simple smart watch</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 products-item">
+                    <a href="#productsModal6" class="products-link" data-toggle="modal">
+                        <div class="products-hover">
+                            <div class="products-hover-content">
+                                <i class="fa fa-eye fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/products/dreams.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="products-caption">
+                        <h4>Icarus Heart Watch</h4>
+                        <p class="text-muted">smart watch with heart measuring</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 products-item">
+                    <a href="#productsModal6" class="products-link" data-toggle="modal">
+                        <div class="products-hover">
+                            <div class="products-hover-content">
+                                <i class="fa fa-eye fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="img/products/dreams.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="products-caption">
+                        <h4>Icarus Dream Monitor</h4>
+                        <p class="text-muted">head EEG monitor</p>
                     </div>
                 </div>
             </div>
