logos and footer

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
                     <li>
                         <a class="page-scroll" href="#contact">Join Us</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="./blog.html">Blog</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -418,32 +421,32 @@
     </section>
 
     <!-- Clients Aside -->
-    <!--<aside class="clients">-->
-        <!--<div class="container">-->
-            <!--<div class="row">-->
-                <!--<div class="col-md-3 col-sm-6">-->
-                    <!--<a href="#">-->
-                        <!--<img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">-->
-                    <!--</a>-->
-                <!--</div>-->
-                <!--<div class="col-md-3 col-sm-6">-->
-                    <!--<a href="#">-->
-                        <!--<img src="img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">-->
-                    <!--</a>-->
-                <!--</div>-->
-                <!--<div class="col-md-3 col-sm-6">-->
-                    <!--<a href="#">-->
-                        <!--<img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">-->
-                    <!--</a>-->
-                <!--</div>-->
-                <!--<div class="col-md-3 col-sm-6">-->
-                    <!--<a href="#">-->
-                        <!--<img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">-->
-                    <!--</a>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</aside>-->
+    <aside class="clients">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 col-sm-6">
+                    <a href="#">
+                        <img src="img/logos/osi.png" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <a href="#">
+                        <img src="img/logos/ohv.png" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <a href="#">
+                        <img src="img/logos/gplv3.png" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <a href="#">
+                        <img src="img/logos/cc.png" class="img-responsive img-centered" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </aside>
 
     <section id="contact">
         <div class="container">
@@ -465,17 +468,13 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="https://github.com/icarus-sensors"><i class="fa fa-github"></i></a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline pull-right quicklinks">
-                        <li><a href="#todo">Terms of Use</a>
+                        <li><img src="img/by-sa.png" title="Creative Commons Attribution-ShareAlike"/>
                         </li>
                     </ul>
                 </div>
