--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 ---
 layout: main
 active: home
+
+leadIn: We are chalenging closed systems!
+heading: Everything is Open
+reference: \#mission
+buttonText: dicover more
 ---
 
 <!-- mission Section -->
