--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,11 @@
 ---
 layout: main
 active: blog
+
+leadIn: We've documented every bit of our design process!
+heading: Our Knowledge
+reference: \#posts
+buttonText: read posts
 ---
 <section id="posts">
     <div class="container">
