accelerometer block diagram

--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@ active: blog
 
 leadIn: We've documented every bit of our design process!
 heading: Our Knowledge
-reference: \#posts
+reference: posts
 buttonText: read posts
 ---
 <section id="posts">
