--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ active: home
 
 leadIn: We are chalenging closed systems!
 heading: Everything is Open
-reference: \#mission
+reference: mission
 buttonText: dicover more
 ---
 
@@ -107,7 +107,7 @@ buttonText: dicover more
                     <img src="img/products/treehouse.png" class="img-responsive" alt="">
                 </a>
                 <div class="products-caption">
-                    <h4>Icarus Gyro Band</h4>
+                    <h4>Icarus 9DOF Band</h4>
                     <p class="text-muted">accelerometer & gyroscope on your wrist</p>
                 </div>
             </div>
