--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ leadIn: We are chalenging closed systems!
 heading: Everything is Open
 reference: mission
 buttonText: dicover more
+description: We are builing wearables for fitness and health monitoring. Check it out and join us! It is free :-)
 ---
 
 <!-- mission Section -->
