--- a/index.html
+++ b/index.html
@@ -284,52 +284,59 @@ description: We are builing wearables for fitness and health monitoring. Check i
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Our Amazing Team</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                <h2 class="section-heading">Icarus Core Team</h2>
+                <h3 class="section-subheading text-muted">We join passion and contribution to build truly open source products.</h3>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-4">
                 <div class="team-member">
-                    <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
-                    <h4>Kay Garland</h4>
-                    <p class="text-muted">Lead Designer</p>
+                    <img src="img/team/lukasz.jpg" class="img-responsive img-circle" alt="">
+                    <h4>Łukasz Bałczewski</h4>
+                    <p class="text-muted">Product Specialist</p>
                     <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        <li><a href="https://www.facebook.com/lukasz.balczewski"><i class="fa fa-facebook"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="http://pl.linkedin.com/in/lukaszbalczewski"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="team-member">
-                    <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
-                    <h4>Larry Parker</h4>
-                    <p class="text-muted">Lead Marketer</p>
+                    <img src="img/team/krzys.jpg" class="img-responsive img-circle" alt="">
+                    <h4>Krzysztof Szcześniak</h4>
+                    <p class="text-muted">Technical Engineer</p>
                     <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        <li><a href="https://www.facebook.com/kszczesn"><i class="fa fa-facebook"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="http://pl.linkedin.com/in/krzysztofszczesniak"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="team-member">
-                    <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
-                    <h4>Diana Pertersen</h4>
-                    <p class="text-muted">Lead Developer</p>
+                    <img src="img/team/marek.jpg" class="img-responsive img-circle" alt="">
+                    <h4>Marek Śmigielski</h4>
+                    <p class="text-muted">Technical Engineer</p>
                     <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        <li><a href="https://twitter.com/mareksmigielski"><i class="fa fa-twitter"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
+                        <li><a href="https://www.facebook.com/smigielski.marek"><i class="fa fa-facebook"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="http://pl.linkedin.com/in/mareksmigielski"><i class="fa fa-linkedin"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-sm-4">
+                <div class="team-member">
+                    <img src="img/team/andrzej.jpg" class="img-responsive img-circle" alt="">
+                    <h4>Andrzej Stasiak</h4>
+                    <p class="text-muted">Technical Engineer</p>
+                    <ul class="list-inline social-buttons">
+                        <li><a href="http://pl.linkedin.com/pub/andrzej-stasiak/22/312/780"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -337,7 +344,10 @@ description: We are builing wearables for fitness and health monitoring. Check i
         </div>
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                <p class="large text-muted">
+                    We believe in a community. If you have some free time, skills or willingness to learn, join us and lets
+                    build better fitness products together.
+                </p>
             </div>
         </div>
     </div>
