--- a/blog.html
+++ b/blog.html
@@ -1,11 +1,7 @@
 ---
-layout: main
+layout: default
+navigation: navbar-dark
 active: blog
-
-leadIn: We've documented every bit of our design process!
-heading: Our Knowledge
-reference: posts
-buttonText: read posts
 ---
 <section id="posts">
     <div class="container">
